--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^6.3.2",
     "@nestjs/typeorm": "^6.1.2",
     "argon2": "^0.24.0",
+    "class-sanitizer": "^0.0.5",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "cookie-parser": "^1.4.4",
@@ -44,6 +45,7 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.3.3",
+    "sanitize-html": "^1.20.1",
     "simple-encryptor": "^3.0.0",
     "slug": "^1.1.0",
     "typeorm": "^0.2.18"
